--- a/Array/排序.md
+++ b/Array/排序.md
@@ -48,7 +48,7 @@
 
 ## Example:
   
-```
+```java
 import java.util.Arrays;
 
 public class ArraySort {
@@ -81,9 +81,8 @@ public class ArraySort {
 		
 	}
 ```
----
 ### 交換元素順序
-```
+```java
 	
 	public static void changePos(int arr[], int a, int b) {
 		
@@ -95,8 +94,8 @@ public class ArraySort {
 	}
 }
 ```
----
 ### 遍歷數組
+```java
 	public static void printArr(int[] arr) {
 		
 		for(int i = 0; i < arr.length; i++) {
@@ -107,10 +106,9 @@ public class ArraySort {
 
 		System.out.println();
 	}
-
----
-### 反轉數組
 ```
+### 反轉數組
+```java
 	public static void reverseArr(int[] arr) {
 		//把數組先分一半，把遍歷到的元素先取出，與對應的元素交換位置
 		for(int x = 0; x < arr.length/2; z++) {
@@ -124,9 +122,8 @@ public class ArraySort {
 	}
 	
 ```
----
 ### 選擇排序
-	
+```java	
 	public static void selectSort(int[] arr) {
 		//外循環: 由角標為0的元素開始循環到最後一個元素。
 		//內循環: 由起始循環數後一個元素開始，每一個數都與第一個元素進行比較。
@@ -138,9 +135,9 @@ public class ArraySort {
 			}
 		}
 	}
-	
----
+```	
 ### 效能較好的選擇排序
+```java
 	public static void bestSort(int[] arr) {
 		
 		for(int x = 0; x < arr.length - 1; x++) {
@@ -171,10 +168,10 @@ public class ArraySort {
 			}
 		}
 	}
-	
+```
 ---
 ### 冒泡排序
-```
+```java
 	public static void bubbleSort(int[] arr) {
 		//外循環: 由角標為0的元素開始循環到最後一個元素。
 		/*內循環: 由第0個元素開始，每一個數都與後面一個元素進行比較。
