--- a/DOM/新聞字體.md
+++ b/DOM/新聞字體.md
@@ -9,7 +9,7 @@
    **事件源:** a 標籤，**事件:** onclick
    **被處理的節點:** div-newstext
    **注意:** 既然要給超鏈接加入自訂義的事件處理，就要先取消超鏈接的默認點擊效果。可以給 href 設置: javascript:void(0) 來完成。
-```
+```javascript
 <!DOCTYPE html>
 <html lang="en">
 <head>
