--- a/Java Web/編碼.md
+++ b/Java Web/編碼.md
@@ -52,7 +52,8 @@ utf-8 (萬國碼，支持全世界編碼)
         </form>
       </body>
     </html>
-    
+    ```
+    ```java
     public class ServletDemo extends HttpServlet {
     
     	public void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
