--- a/Object Oriented/類與對象.md
+++ b/Object Oriented/類與對象.md
@@ -43,7 +43,7 @@
 2. 行為:
     運行
 
-```
+```java
 public class Car {
 
 	public void run() {
@@ -72,7 +72,7 @@ public class CarDemo {
 ```
 ---
 ### 類類型變量
-```
+```java
 	public static void show(Car c) {//類類型的變量一定指向對象，不然為空
 	    c.num = 4;
 	    c.color = "white";
