--- a/Object Oriented/數據類型參數傳遞.md
+++ b/Object Oriented/數據類型參數傳遞.md
@@ -2,7 +2,7 @@
 
 ## 基本數據類型參數傳遞
 
-```
+```java
 public class Practice {
 
 	public static void main(String[] args) {
@@ -33,7 +33,7 @@ x = 3
 
 ## 引用數據類型參數傳遞
 
-```
+```java
 public class Practice {
 
 		int x = 3;
