--- a/Object Oriented/封裝.md
+++ b/Object Oriented/封裝.md
@@ -7,7 +7,7 @@
 - 可被其他程序創建對象後訪問，容易造成不確定性和安全隱患。
 
 ### 未封裝代碼
-```
+```java
 public class Person {
 	
 	int age;
@@ -32,7 +32,7 @@ age = -10; //年齡不可能為負數，不合要求。
 ```
 ---
 ### 封裝後代碼
-```
+```java
 public class Person {
 	
 	private int age;//將 age 變為私有的
