--- a/Object Oriented/構造函數.md
+++ b/Object Oriented/構造函數.md
@@ -40,7 +40,7 @@ Person p = new Person();
 - 可將構造函數設為私有的(private),以防止其他類要對其進行調用時初始化而造成空間浪費，但需在類中所有方法為靜態的前提下。
 
 ## 構造函數的重載 (Overload)
-```
+```java
 public class PersonDemo {
 		
 	public static void main(String[] args) {
