--- a/Array/查找.md
+++ b/Array/查找.md
@@ -20,7 +20,7 @@
 7. 如果想將未存在得角標數加入數組，則最終返回值為小角標(min)。
 
 ## Example
-```
+```java
 public class ArrayIndex {
 
 	public static void main(String[] args) {
