--- a/Array/查找.md
+++ b/Array/查找.md
@@ -39,6 +39,7 @@ public class ArrayIndex {
 	}
 ```	
 ### 普通查找
+```
 	public static int getIndex(int[] arr, int key) {
 		
 		for(int x = 0; x < arr.length; x++) {
@@ -49,9 +50,9 @@ public class ArrayIndex {
 		}
 		return -1;
 	}
-
-### 二分查找
 ```
+### 二分查找
+```java
 	public static int binarySearch(int arr_2[], int key) {
 		/*
 		    定義三元素: 最小角標、中間角標、最大角標
