--- a/Array/查找.md
+++ b/Array/查找.md
@@ -20,6 +20,7 @@
 7. 如果想將未存在得角標數加入數組，則最終返回值為小角標(min)。
 
 ## Example
+
 ```java
 public class ArrayIndex {
 
@@ -37,9 +38,10 @@ public class ArrayIndex {
 		
 		System.out.println("Index = " + index_2);
 	}
-```	
-### 普通查找
 ```
+
+### 普通查找
+```java
 	public static int getIndex(int[] arr, int key) {
 		
 		for(int x = 0; x < arr.length; x++) {
@@ -51,6 +53,7 @@ public class ArrayIndex {
 		return -1;
 	}
 ```
+
 ### 二分查找
 ```java
 	public static int binarySearch(int arr_2[], int key) {
