--- a/Array/查表法.md
+++ b/Array/查表法.md
@@ -8,7 +8,7 @@
 
 ## Example:
 ### 日期查表
-
+```java
     public class ArraySearch {
     
     	public static void main(String[] args) {
@@ -30,10 +30,10 @@
     	}
     
     }
-    
+```
    ---------
 ### 進制轉換
-
+```java
     public class  ArraySearch_2{
 
     	public static void main(String[] args) 
@@ -93,3 +93,4 @@
     	}
     
     }
+```
