--- a/Array/查表法.md
+++ b/Array/查表法.md
@@ -9,88 +9,77 @@
 ## Example:
 ### 日期查表
 ```java
-    public class ArraySearch {
+public class ArraySearch {
+
+  public static void main(String[] args) {
+    String week = getWeek(2); //數組查表法
+    System.out.println(week);
+  }
     
-    	public static void main(String[] args) {
-    		String week = getWeek(2); //數組查表法
-    		System.out.println(week);
-    	}
-    
-    	private static String getWeek(int num) {
-    		//定義一個對應關係表
-    		String[] weeks = {"Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"};
-    		/*
-    		 一會查表查到比較的數據
-    		 數據一多，就先存儲起來，再進行操作。
-    		 所以定義一個數組作為臨時容器。
-    		*/
+  private static String getWeek(int num) {
+    //定義一個對應關係表
+    String[] weeks = {"Mon", "Tue", "Wed", "Thu", "Fri", "Sat", "Sun"};
+    /*
+    一會查表查到比較的數據
+    數據一多，就先存儲起來，再進行操作。
+    所以定義一個數組作為臨時容器。
+    */
     		
     		
-    		return arr[num - 1];//通過索引獲取表中元素
-    	}
-    
-    }
+    return arr[num - 1];//通過索引獲取表中元素
+  }
+}
 ```
    ---------
 ### 進制轉換
 ```java
-    public class  ArraySearch_2{
+public class  ArraySearch_2{
+  public static void main(String[] args) {
+    toBinary(-6);
+    // toOctal(26);
+    // toHex(26);
+    System.out.println(Integer.toBinaryString(-6));
+}
+    
+//二進制
+public static void toBinary(int num) {
+  trans(num,1,1);
+}
+//八進制
+public static void toOctal(int num) {
+  trans(num,7,3);
+}
+//十六進制
+public static void toHex(int num) {
+  trans(num,15,4);
+}
+    
+public static void trans(int num,int base,int offset) {
 
-    	public static void main(String[] args) 
-    	{
-    		toBinary(-6);
-    //		toOctal(26);
-    //		toHex(26);
-    		System.out.println(Integer.toBinaryString(-6));
-    	}
-    
-    	//二進制
-    	public static void toBinary(int num)
-    	{
-    		trans(num,1,1);
-    	}
-    	//八進制
-    	public static void toOctal(int num)
-    	{
-    		trans(num,7,3);
-    	}
-    	//十六進制
-    	public static void toHex(int num)
-    	{
-    		trans(num,15,4);
-    	}
-    
-    	public static void trans(int num,int base,int offset)
-    	{
-    
-    		if(num==0)
-    		{
-    			System.out.println("0");
-    			return ;
-    		}
-    		
-    		char[] chs = {'0','1','2','3',
-    						'4','5','6','7',
-    						'8','9','A','B',
-    						'C','D','E','F'};
-    		
-    		char[] arr = new char[32];
-    		int pos = arr.length;
-    
-    		while(num!=0)
-    		{
-    			int temp = num & base;
-    			arr[--pos] = chs[temp];
-    			num  = num >>> offset;
-    		}
-    
-    		for(int x=pos ;x<arr.length; x++)
-    		{
-    			System.out.print(arr[x]);
-    		}
-    		System.out.println();
-    
-    	}
-    
-    }
+  if(num==0) {
+    System.out.println("0");
+    return;
+  }
+
+  char[] chs = {'0','1','2','3',
+                '4','5','6','7',
+                '8','9','A','B',
+                'C','D','E','F'};
+
+  char[] arr = new char[32];
+  int pos = arr.length;
+
+  while(num!=0) {
+    int temp = num & base;
+    arr[--pos] = chs[temp];
+    num  = num >>> offset;
+  }
+
+  for(int x=pos ;x<arr.length; x++) {
+    System.out.print(arr[x]);
+  }
+
+  System.out.println();    
+  }
+}
 ```
