--- a/Array/二維數組.md
+++ b/Array/二維數組.md
@@ -12,7 +12,7 @@
 
 ## Example
 ### 格式一
-```
+```java
 public static int twoDimensionArr_1(int arr[][], int index_1, int index_2, int num) {	
 	arr[index_1][index_2] = num;
 	
@@ -20,7 +20,7 @@ public static int twoDimensionArr_1(int arr[][], int index_1, int index_2, int n
 }
 ```
 ### 格式二
-```
+```java
 public static int twoDimensionArr_2(int arr_2[][], int index_1, int index_2, int num) {
 	arr_2[index_1][index_2] = num;
 	
@@ -28,7 +28,7 @@ public static int twoDimensionArr_2(int arr_2[][], int index_1, int index_2, int
 }
 ```
 ### 格式三
-```
+```java
 public static void twoDimensionArr_3() {
 	int[][] arr_3 = {{1,5,2,8},{5,9,10,-3},{2,7,-5,-18}};
 		
@@ -36,7 +36,7 @@ public static void twoDimensionArr_3() {
 }
 ```
 ### 遍歷二維數組
-```
+```java
 public static void printArr(int arr_3[][]) {	
 	for(int x = 0; x < arr_3.length; x++) {
 		
