--- a/Array/其他.md
+++ b/Array/其他.md
@@ -1,6 +1,6 @@
 # 其他
 ## 用戶自定義元素
-```
+```java
 private static void dataEntryArray(int[] numbers) {
 	//讓用戶輸入所有數組中的元素
 	Scanner keyboard = new Scanner(System.in);
@@ -13,7 +13,7 @@ private static void dataEntryArray(int[] numbers) {
 }
 ```
 ## 遍歷並換行
-```
+```java
 private static void printArray(int[] numbers) {
 	//遍歷數組並打印，每十個為一行
 	for(int x = 0; x < numbers.length; x++) {
@@ -26,7 +26,7 @@ private static void printArray(int[] numbers) {
 }
 ```
 ## 元素平均值
-```
+```java
 private static double averageNumber(int[] numbers) {
 	//計算數組中的平均值
 	double total = 0;
@@ -38,7 +38,7 @@ private static double averageNumber(int[] numbers) {
 }
 ```
 ## 移除元素
-```
+```java
 private static void removeElement(int[] numbers, int index) {
 	//移除數組中的指定元素
 	for(int x = 0; x < numbers.length; x++) {
