--- a/Collections/基本數據類型對象包裝類.md
+++ b/Collections/基本數據類型對象包裝類.md
@@ -35,7 +35,7 @@ toHexString -> 十六進制
 parseInt("String", redix)
 
 ## Example
-```
+```java
 System.out.println(Integer.toBinaryString(60));//二進制
 System.out.println(Integer.toOctalString(60));//八進制
 System.out.println(Integer.toHexString(60));//十進制
