--- a/Collections/集合框架(集合類).md
+++ b/Collections/集合框架(集合類).md
@@ -34,7 +34,7 @@ Object[] toArray(); -> 將集合轉成數組。
 ![](https://github.com/jack870131/Markdown-Pic/blob/master/Picture/Collection.jpg)
 
 ## Example
-```
+```java
 import java.util.ArrayList;
 import java.util.Collection;
 
@@ -73,7 +73,7 @@ public class CollectionDemo {
 true
 ```
 ---
-```
+```java
 	public static void main(String[] args) {
 		
 		//創建容器
