--- a/Collections/迭代器.md
+++ b/Collections/迭代器.md
@@ -9,7 +9,7 @@
 Iterator 接口就是對所有的 Collection 容器進行元素取出的公共接口。
 
 ## 基本使用
-```
+```java
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
