--- a/Collections/泛型.md
+++ b/Collections/泛型.md
@@ -20,7 +20,7 @@
 - 在運行時，通過獲取元素的類型進行轉換動作。不用使用者在強制轉換。
 
 ## 在集合中的應用
-```
+```java
 public class GenericPerson implements Comparable<GenericPerson> { //指定泛型
 	
 	private String name;
