--- a/Collections/泛型限定.md
+++ b/Collections/泛型限定.md
@@ -8,7 +8,7 @@
 
 ## 演示
 ### 泛型的上限
-```
+```java
 public class GenericStudent extends GenericPerson {
 
 	public GenericStudent() {
@@ -102,7 +102,7 @@ Jacky @ 20
 Eric @ 30
 ```
 ### 泛型的下限
-```
+```java
 public static void printCollection2(Collection<? super GenericStudent> al) {//泛型的下限
 		
 		Iterator<? super GenericStudent> it = al.iterator();
