--- a/IO/緩沖區.md
+++ b/IO/緩沖區.md
@@ -10,7 +10,7 @@
 
 ## BufferedWriter
 ### **演示**
-```
+```java
 import java.io.BufferedWriter;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -61,7 +61,7 @@ I'm Jack
 ```
 ##BufferedReader
 ###**演示**
-```
+```java
 import java.io.BufferedReader;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
