--- a/IO/裝飾設計模式.md
+++ b/IO/裝飾設計模式.md
@@ -20,7 +20,7 @@ Writer
 - 如果體系進行功能擴展，多了流對象，那麼繼承體系會越來越臃腫，不夠靈活。
 - 既然加入的都是**緩衝技術**，可以將緩衝進行單獨封裝，哪個對象需要緩衝就將哪個對象和緩衝關聯。
 
-```
+```java
 class Buffer {
     Buffer(TextWriter w) {
     }
@@ -41,7 +41,7 @@ class BufferWriter extends Writer {
 - 特點: 裝飾類和被裝飾類都必須所屬**同一個接口或父類**。
 
 ## Example
-```
+```java
 public class DecoratorPerson {
 	
 	public void eat() {
