--- a/IO/轉換流.md
+++ b/IO/轉換流.md
@@ -5,7 +5,7 @@
 - OutputStreamWriter: 字符到字節的橋梁。解碼。
 
 ## 演示
-```
+```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.FileInputStream;
