--- a/IO/流操作的規律.md
+++ b/IO/流操作的規律.md
@@ -36,13 +36,13 @@
 源: 硬盤 -> File
 目的: 硬盤 -> File
  
- ```
+ ```java
 FileReader fr = new FileReader("a.txt");
 FileWrider fw = new FileWriter("b.txt");
   ```
 **需不需要額外功能**
 需要，需要高效
-  ```
+  ```java
 BufferedReader bufr = new BufferedReader(new FileReader("a.txt"));
 BufferedWriter bufw = new BufferedWriter(new FileWriter("b.txt));
   ```
@@ -65,12 +65,12 @@ FileWriter fw = new FileWriter("b.txt);
 需要: 轉換。
 將字節流轉成字符流。因為明確的源是 Reader，這樣操作文本數據更便捷。
 所以要將已有的字節流轉成字符流。使用字節 -> 字符。InputStreamReader
-  ```
+  ```java
 InputStreamReader isr = new InputStreamReader(System.in);
 FileWriter fw = new FileWriter("b.txt");
   ```
 需要: 高效。
-  ```
+  ```java
 BufferedReader bufr = new BufferedReader(new InputStreamReader(System.in));
 BufferedWriter bufw = new BufferedWriter(new FileWriter("b.txt"));
   ```
@@ -84,18 +84,18 @@ BufferedWriter bufw = new BufferedWriter(new FileWriter("b.txt"));
 源: 硬盤 -> File
 目的: 控制台 -> System.out
 
-  ```
+  ```java
 FileReader fr = new FileReader("a.txt");
 OutputStream out = System.out;//PrintStream
   ```
 **需不需要額外功能**
 需要: 轉換
-  ```
+  ```java
 FileReader fr = new FileReader("a.txt");
 OutputStreamWriter osw = new OutputStreamWriter(System.out);
   ```
 需要: 高效
-  ```
+  ```java
 BufferedReader bufr = new BufferedReader(new FileReader("a.txt"));
 BufferedWriter bufw = nwe BufferedWriter(new OutputStreamWriter(System.out));
   ```
@@ -109,7 +109,7 @@ BufferedWriter bufw = nwe BufferedWriter(new OutputStreamWriter(System.out));
 源: 鍵盤 -> System.out
 目的: 控制台 -> System.out
  
- ```
+ ```java
 InputStream in = System.in;
 OutputStream out = System.out;
   ```
@@ -117,12 +117,12 @@ OutputStream out = System.out;
 需要: 轉換
 因為都是字節流，但是操作的卻是文本數具。
 所以使用字符流操作起來更為便捷。
-  ```
+  ```java
 InputStreamReader isr = new InputStreamReader(System.in);
 OutputStreamWriter osw = new OutputStreamWriter(System.out);
   ```
 需要: 高效
-  ```
+  ```java
 BufferedReader bufr = new BufferedReader(new InputStreamReader(System.in));
 BufferedWriter bufw = new BufferedWriter(new OutputStreamWriter(System.out));
   ```
@@ -131,14 +131,14 @@ BufferedWriter bufw = new BufferedWriter(new OutputStreamWriter(System.out));
 **目的** OutputStream，Writer
 **純文本** Writer
 **設備** 硬盤File
-    ```
+```java
 FileWriter fw = new FileWriter("a.txt");
 fw.write("你好"); 
-    ```
+```
 
-    **Example**
-   
-    ```
+**Example**
+
+```java
 	public static void main(String[] args) throws IOException {
 
 		writeText_1();
@@ -212,7 +212,7 @@ fw.write("你好");
 		osw.close();
 	}
 }
-    ```
+```
     **打印結果**
     ```
     你好
@@ -228,7 +228,7 @@ fw.write("你好");
 OutputStreamWriter osw = new OutputStreamWriter(new FileOutputStream("a.txt"), charsetName);
     ```
 **需要高效**
-    ```
+    ```java
 BufferedWriter bufw = new BufferedWriter(new OutputStreamWriter(new FileOutputStream("a.txt"), charsetName));
     ```
 
