--- a/IO/序列流.md
+++ b/IO/序列流.md
@@ -7,7 +7,7 @@
 
 - 需求: 將 1.txt 2.txt 3.txt 文件中的數據合併到一個文件中。
 
-```
+```java
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
