--- a/IO/文件切割&合併.md
+++ b/IO/文件切割&合併.md
@@ -1,7 +1,7 @@
 # 文件切割 & 合併
 
 ## 文件切割器
-```
+```java
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -68,7 +68,7 @@ public class SplitFileDemo {
 ```
 
 ## 文件合併
-```
+```java
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
