--- a/IO/對象序列化.md
+++ b/IO/對象序列化.md
@@ -11,7 +11,7 @@
 ## transient 關鍵字
 非靜態數據不想被序列化可以使用這個關鍵字修飾
 
-```
+```java
 import java.io.Serializable;
 
 public class ObjectPerson implements Serializable /*標記接口*/ {
