--- a/IO/編碼表.md
+++ b/IO/編碼表.md
@@ -22,7 +22,7 @@
             如果**編對解錯**，還有可能有救。
 
 ## Example
-```
+```java
 import java.io.UnsupportedEncodingException;
 
 public class EncodeDemo {
@@ -91,7 +91,7 @@ s2: 你好
 ```
 
 **"聯通"問題 - 演示**
-```
+```java
 import java.io.UnsupportedEncodingException;
 
 //聯通問題
