--- a/Reflection/反射練習.md
+++ b/Reflection/反射練習.md
@@ -1,7 +1,7 @@
 # 反射練習
 
 ## 演示
-```
+```java
 public class ReflectDemo {
 
 	public static void main(String[] args) throws ClassNotFoundException {
@@ -42,8 +42,10 @@ public class ReflectDemo {
 
 }
 ```
+
 <br>
-```
+
+```java
 package Reflect;
 
 public interface PCI {
