--- a/Multithread/創建線程.md
+++ b/Multithread/創建線程.md
@@ -20,7 +20,7 @@
   主線程的名字就是 main。
 
 - Example
-```
+```java
 public class Demo extends Thread {
 	
 	private String name;
@@ -82,7 +82,7 @@ public class ThreadDemo {
 4. 調用線程對象的 start 方法開啟線程。
 - **注意:** 方式二細節可查看 API 文檔加以了解。
 - Example
-```
+```java
 public class Demo implements Runnable {//準備擴展 Demo1 類的功能，讓其中內容可以作為線程的任務執行。
 										//通過接口的形式完成。
 	
