--- a/Multithread/多線程事例.md
+++ b/Multithread/多線程事例.md
@@ -4,7 +4,7 @@
 
 ## Example
 - extends Thread
-```
+```java
 public class Ticket extends Thread {
 	
 	private int num = 10;
@@ -74,7 +74,7 @@ Thread-2 sale 1
 
 ---
 - implements Runnable: 目的為共享數據
-```
+```java
 public class Ticket implements Runnable //extends Thread 
 {	
     //目的: 共享數據
