--- a/Multithread/多線程安全.md
+++ b/Multithread/多線程安全.md
@@ -41,7 +41,7 @@ synchronized(對象) {
   可以用 **getClass** 方法獲取，也可以用當前 **類名.class** 表示。
 
 ## Example
-```
+```java
 public class Ticket extends Thread {
 	
 	private int num = 10;
