--- a/Multithread/多線程安全示例.md
+++ b/Multithread/多線程安全示例.md
@@ -3,7 +3,7 @@
 ## 需求: 兩個儲戶，每個都到銀行存錢，每次存100，共存三次。
 
 ## Example
-```
+```java
 public class Customer implements Runnable {//多個儲戶
 
 	private Bank b = new Bank();//實例化對象並共享數據
