--- a/Multithread/多線程下的單例模式.md
+++ b/Multithread/多線程下的單例模式.md
@@ -1,7 +1,7 @@
 # 多線程下的單例模式
 
 ## 餓漢式(不會造成多線程安全問題)
-```
+```java
 public class Single {
 
     private static final Single s = new Single();
@@ -17,7 +17,7 @@ public class Single {
 ```
 
 ## 懶漢式(會造成安全問題)
-```
+```java
 public class Single {
 	
 	private static Single s = null;
