--- a/Multithread/死鎖.md
+++ b/Multithread/死鎖.md
@@ -5,7 +5,7 @@
 - 開發中盡量不發生，但考試時可能遇到。
 
 ## Example
-```
+```java
 public class DeadLockTest2 {
 
 	public static final Object LOCK_A = new Object();//定義兩個鎖(對象)
@@ -76,7 +76,7 @@ Thread-0 @ if @ LOCKA
 //鎖不上的狀態
 ```
 ---
-```
+```java
 public class DeadLock implements Runnable {
 	
 	private int num = 10;
