--- a/Multithread/線程間的通訊.md
+++ b/Multithread/線程間的通訊.md
@@ -4,9 +4,9 @@
 多個線程在處理同一資源，但是任務卻不同。
 
 ## 等待/喚醒機制
-1. **wait():**讓線程處於凍結狀態，被 wait 的線程會被存儲存到線程池中。
+1. **wait():** 讓線程處於凍結狀態，被 wait 的線程會被存儲存到線程池中。
 2. **notify():** 喚醒線程池中的一個線程(任意)。
-3. **notifyAll():**喚醒線程池中的所有線程。
+3. **notifyAll():** 喚醒線程池中的所有線程。
 
 **注意:** 
 - 這些方法都必須定義在同步中，
@@ -24,8 +24,8 @@
   wait: 釋放執行權，釋放鎖。
   sleep: 釋放執行權，不釋放鎖。
 
-## Examle
-```
+## Example
+```java
 //資源
 public class Resource {
 	
