--- a/Multithread/等待&喚醒機制事例.md
+++ b/Multithread/等待&喚醒機制事例.md
@@ -14,7 +14,7 @@
 - 出現了替代了同步代碼塊或者同步函數。將同步的隱式鎖操作變成現實所操作。
   同時更為靈活，可以一個鎖上加上多組監視器。
 - 格式:
-```
+```java
 Lock lock = new ReentrantLock();
 void show() {
     try {
@@ -37,7 +37,7 @@ void show() {
 
 ## Example
 ### 原始解決版本
-```
+```java
 public class PCResource {
 	
 	private String name;
@@ -161,7 +161,7 @@ Thread-0 @ Producer @ Chicken 3
 ```
 
 ### jdk 1.5 以後的解決版本
-```
+```java
 import java.util.concurrent.locks.*;
 
 public class PCResource {
