--- a/Multithread/停止線程.md
+++ b/Multithread/停止線程.md
@@ -15,7 +15,7 @@
 - 暫停當前正在執行的線程對象，並執行其他線程。
 
 ## Example
-```
+```java
 public class StopThread implements Runnable {
 	
 	private boolean flag = true;//定義標記以停止線程
