--- a/HTML/超鏈接標籤.md
+++ b/HTML/超鏈接標籤.md
@@ -16,7 +16,7 @@
  **注意:** 定位標記一定要與超鏈接標籤一起使用才有效。
 
 ## Example
-```
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -36,7 +36,7 @@
 
 ---
 
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
