--- a/HTML/其他標籤.md
+++ b/HTML/其他標籤.md
@@ -7,7 +7,7 @@
 ## meta 標籤
 - name: 網頁的描述信息。當取 keywords 時，content 屬性的內容就作為搜索引擎的關鍵字進行搜索。
 - http-equiv: 模擬 http 協議的響應消息頭。
-```
+```html
 <meta http-equiv="refresh" content="3" url="http://www.baidu.com"> <!--表示打開此頁面3秒後自動轉到百度頁面-->
 ```
 
@@ -16,12 +16,12 @@
 - type: 文檔類型。
 - media: 指定目標文檔再哪種設備上起作用。
 
-```
+```html
 <link rel="stylesheet" type="text/css" media="screen,print" href="a.css">
 ```
 
 ## 常見小標籤演示
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
