--- a/CSS/概述.md
+++ b/CSS/概述.md
@@ -18,7 +18,7 @@ CSS 將網頁內容和顯示樣式進行分離，提高了顯示功能。
 - 如果有一個屬性有多個值，則用**空格**隔開。
 
 ## Example
-```
+```css
 <!--span.css-->
 span {
 	background-color: #E80505;
