--- a/JavaScript/概述.md
+++ b/JavaScript/概述.md
@@ -21,7 +21,7 @@
 **注意:** 如果 script 標籤中使用 src 屬性，那麼該標籤中封裝的 Javascript 代碼不會被執行。
 
 ## Example
-```
+```javascript
 //demo.js
 alert("Hello World");
 
