--- a/DOM/下拉菜單.md
+++ b/DOM/下拉菜單.md
@@ -2,7 +2,7 @@
 
 ## 演示
 ### **選擇顏色**
-```
+```javascript
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,7 +87,7 @@
 ```
 ---
 ### **選擇城市**
-```
+```javascript
 <!DOCTYPE html>
 <html lang="en">
 <head>
